# task-vt

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  README.md  setup.cfg  setup.py  tox.ini
Matan_CONTRADICTION/: Contradiction_Features_mancon.ipynb
Matan_CONTRADICTION/CONTRADICTION_materials/.ipynb_checkpoints/: Task_VT_Contradiction_Feature_Engineering_&_XGBoost-checkpoint.ipynb
Matan_CONTRADICTION/FNC_material_for_CONTRADICTION/: FNC_Gradient_Boosting.ipynb  FNC_feature_engineering.ipynb
antigen_scoring/notebooks/: SARS_proteins_co-occurence.ipynb
contradictory_claims/notebooks/: 2T.4.4.2 - Extract similar claims.ipynb  2T.4.4.4 - BioBERT with continued training option.ipynb  2T.4.4.4 - BioBERT.ipynb  2T.4.5 Claim extraction.ipynb  Claims processing.ipynb  Contradictory_Claims_IAA.ipynb  roam_covid_contradict.ipynb  vt_contra_Ftr_Engrg_BioWv.ipynb  vt_contra_metadata_filtering.ipynb  vt_contra_paper_section_filtering.ipynb  vt_contra_text_preprocessing.ipynb  vt_contra_xgb_with_mancon.ipynb
contradictory_claims/notebooks/.ipynb_checkpoints/: vt_contra_xgb_with_mancon-checkpoint.ipynb
drug_treatment_extraction/notebooks/: Task_1T.1.1.ipynb
immunology_kg/notebooks/: 1.1_data_pre-processing.ipynb  1.2_INDRA_baseline.ipynb  1.3_weak-supervised_re.ipynb  Snorkel RE example.ipynb  covid19kg_sentences_thesaurus.ipynb  generate_INDRA_covid19_toy_dataset.ipynb  pybel_graph_EDA.ipynb
immunology_kg/notebooks/snorkel_re_example/: Snorkel RE example.ipynb  snorkel_preprocessing_example.py
immunology_kg/relations/: covid19_frauenhofer_kg.csv  covid19_frauenhofer_spacy_ner.txt  extract_cord.py  get_frauenhofer.py  requirements.txt  spacify.py  test_relations.py  utils.py
main_pipeline/: Round1Submission.ipynb  conf.py  index.rst
main_pipeline/data_utils/: __init__.py  local_processing.py  tf_processing.py
main_pipeline/tests/: util_tests.py
src/coronawhy_vt/: __init__.py  version.py
src/coronawhy_vt/utils/: __init__.py  local_processing.py  tf_processing.py
tests/: __init__.py  constants.py  test_utils.py  test_utils_log.txt  test_version.py
tests/resources/test_files/: sample_sentence.txt  sample_study_words.txt  sample_treatment_words.txt  sample_virus_words.txt
tests/utils/: __init__.py  utils.py
utils/: data_utils_test.py
