###################################################
# Setup.py Configuration                          #
# Adapted from https://github.com/pybel/pybel.git #
###################################################

[metadata]
name = coronawhy_vt
version = 0.0.1-dev
description = CoronaWhy Vaccines and Therapeutics Task Force
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    jupyter
    matplotlib
    numpy
    pandas
    pytest
    scikit-learn
    scipy
    spacy
    click
    transformers==2.9.1
    tensorflow

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = coronawhy_vt
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/coronawhy_vt
    .tox/*/lib/python*/site-packages/coronawhy_vt

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
